cmake_minimum_required(VERSION 3.10)
project(DecodificadorPRT7 VERSION 1.0.0 LANGUAGES CXX)

# Configuraci칩n del est치ndar de C++
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Directorios de inclusi칩n
include_directories(
    ${PROJECT_SOURCE_DIR}/include
)

# Archivos fuente
set(SOURCES
    src/ListaDeCarga.cpp
    src/RotorDeMapeo.cpp
    src/TramaLoad.cpp
    src/TramaMap.cpp
    main.cpp
)

# Archivos de cabecera
set(HEADERS
    include/TramaBase.h
    include/TramaLoad.h
    include/TramaMap.h
    include/ListaDeCarga.h
    include/RotorDeMapeo.h
)

# Crear ejecutable
add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})

# Configuraci칩n de instalacion
install(TARGETS ${PROJECT_NAME}
    RUNTIME DESTINATION bin
)